[project]
name = "china_railway_tools"
version = "0.1.0"
description = "China Railway Tools"
authors = [{ name = "Yunshang", email = "above35000ft@foxmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }

dependencies = [
    "aiosqlite~=0.21.0",
    "annotated-types~=0.7.0",
    "anyio~=4.9.0",
    "appdirs~=1.4.4",
    "certifi",
    "greenlet",
    "h11",
    "httpcore",
    "httpx",
    "idna",
    "lxml>=5.3",
    "pydantic>=2.10",
    "pydantic_core~=2.33.2",
    "sniffio~=1.3.1",
    "SQLAlchemy>=2.0",
    "typing-inspection~=0.4.0",
    "typing_extensions~=4.13.2"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
